		* fix inverse axis scale for Arrhenius plots
		* show more plot sub-types (scatter, line, etc.) in the context menu for faster creation of these visualizations
		* use minus sign instead of hyphen for all numerical values shown on the worksheet and added a new option in the application settings to control this behavior

Performance improvements:
	* Made big spreadsheet (millions of cells) more responsive when selecting columns via the spreadsheet header
	* Faster redraw of plots and recalculation of analysis curves when masking/unmasking multiple cells in the spreadsheet
	* Faster redraw of plots and recalculation of analysis curves and calculated columns when removing multiple rows in the spreadsheet

Bug fixes:
	* Fix crash selecting "cell" from function list in function dialog
	* Properly draw the border line of the symbol in the legend (BUG 491310)
	* Show Ticks on inverted axes (BUG 491502 & 492475)
	* Fix add/subtract value functionality in Matrix (BUG 493523)
	* Fix wrong font size in the plot legend (BUG 493017) and in the axis title (BUG 472982)
	* Fix dark icon theme on non-Plasma platforms
	* Don't overwrite OPJ files when saving (BUG 496480)
	* Fixed the text cursor jumping to the beginning of the line when typing in text in the note (BUG 497029)
	* Fix accuracy of spin boxes(BUG 496804)
	* Don't crash when saving plots having multiple data source columns (box plot, etc.) after one of the columns was deleted (BUG 497712)
	* Don't crash selecting ODS import filter with invalid files
	* Fix moving objects by mouse (BUG 496478)
	* Use the proper local settings when pasting values in Matrix (BUG 500014)

Internal:
	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
	* switch to Qt6 only
	* make QtSvg optional


-----2.11.1 (16.07.2024) -----
Bug fixes:
	* Improve ODS support (selected platforms only)
	* Fixed the initial positioninig of the docks, should be put besides each other and not below